# 42

./: CMakeLists.txt  GGG  Makefile  README.md  a.out  author  char_handlers.c  constructor.c  decimal_handlers.c  decimal_handlers_addit.c  double_handlers.c  ft_printf.c  ft_printf.h  hello.c  install.sh  pars_string.c  print_any_char.c  print_any_string.c  print_double.c  print_double_g_f.c  print_expo_double.c  print_sig_dig.c  print_uns_dig.c  test.c
OpenGL/DemoOfMatrixModelView/src/matrixModelView/Base.lproj/: Main.storyboard
OpenGL/source/: a.out  classes.cpp  vulkan.cpp
Vulkan/DemoOfMatrixModelView/src/matrixModelView/: Info.plist  glExtension.h
Vulkan/DemoOfMatrixModelView/src/matrixModelView.xcodeproj/project.xcworkspace/xcuserdata/song.xcuserdatad/: UserInterfaceState.xcuserstate
Vulkan/source/: classes.cpp  test.cpp  vulkan.cpp
a.out.dSYM/Contents/Resources/DWARF/: a.out
fillit/: Makefile
fillit/source/: coords.c  to_place.c
includes/: ft_printf.h
lemin/: Makefile
lemin/source/solver/: build_anthill.c  open_the_gates.c  pathfinding.c  read_input.c  store_file.c  validate.c
lemin/source/visualizer/: init_visualizer.c
libft/: CMakeLists.txt  Makefile  README.md  ft_atoi.c  ft_bzero.c  ft_lstadd.c  ft_nbrlen.c  ft_putchar.c  ft_putnbr.c  ft_putstr.c  ft_strclen.c  ft_strclr.c  ft_strcrop.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strmap.c  ft_strmapi.c  ft_strnew.c  ft_strnjoin.c  ft_strsplit.c  ft_strsub.c
libft/src/: ft_isalpha.c  ft_isblank.c  ft_iscntrl.c  ft_isdigit.c  ft_islower.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd.c  ft_lstaddend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memdel.c  ft_memset.c  ft_nbrlen.c  ft_putchar.c  ft_putchar_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcrop.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strnequ.c  ft_strnew.c  ft_strnjoin.c  ft_strrchr.c  ft_tolower.c  libft.h
mod1/: README.md
mod1/Vulkan/: Makefile
mod1/Vulkan/DemoOfMatrixModelView/src/matrixModelView/: ModelGL.cpp  ModelGL.h  ViewControllerMain.mm  ViewGL.mm  glExtension.cpp
mod1/Vulkan/DemoOfMatrixModelView/src/matrixModelView.xcodeproj/: project.pbxproj
mod1/Vulkan/DemoOfMatrixModelView/src/matrixModelView.xcodeproj/xcuserdata/song.xcuserdatad/xcschemes/: matrixModelView.xcscheme
mod1/Vulkan/DemoOfMatrixModelView/src/matrixModelView/Assets.xcassets/songho_alpha.dataset/: Contents.json
mod1/Vulkan/VertexData/: vertex.h
mod1/Vulkan/source/: cpp.cpp  includes.h  test.cpp  vkVulkanImpl.cpp  vkVulkanObj.h
source/: error.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isascii.c  ft_isprint.c  ft_lstmap.c  ft_lstnew.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_realloc.c  ft_strclen.c  ft_strcmp.c  ft_strcpy.c  ft_strcrop.c  ft_strcut.c  ft_strdel.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strlcat.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnlen.c  ft_strnstr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_toupper.c  main.c  parse_string.c  (+1 more)
source/solver/: explore_anthill.c  paths.c  prepare_colony.c  queue.c
srcs/: a.out  addit_func.c  addit_func2.c  char_handlers.c  chooser_betw_f_e.c  constructor.c  decimal_handlers.c  decimal_handlers_addit.c  double_handlers.c  ft_atoi.c  ft_bzero.c  ft_isspace.c  ft_memset.c  ft_printf.c  ft_printf.h  ft_strcmp.c  ft_strlen.c  garbage  hello  libft.h  long_arithmetic.c  long_arithmetic2.c  long_arithmetic3.c  newnew  non_print_and_date_handler.c  pars_string.c  parse_string.c  print_any_char.c  print_any_string.c  print_char.c  print_double.c  print_expo_double.c  print_hexadouble.c  print_integer.c  print_sig_dig.c  print_uns_dig.c  scientific_record_funcs.c  test.c
srcs/a.out.dSYM/Contents/Resources/DWARF/: a.out
